--- a/index.html
+++ b/index.html
@@ -23,5 +23,28 @@
   <p>BTS has come with a new album, <strong>'MAP OF THE SOUL : 7'</strong> today, on 21st Feb 2020. It contains 20 songs in its track list; Intro: Persona, Boy with love, Make It Right, Jamais Uv, Dionysus, Interlude: Shadow, Black Swan, Filter, Jet lag, Louder than boms, ON(title), UGH!, OO:OO(Zero O'clock), Inner Child, Friends, Moon, Respect, We are Bulletproof: the Eternal, Outro:Ego, ON(Feat. Sia)</p>
   <img src="microphone.jpg" width="100%">
   <p>Before their comback, they released one track and 2 comback trailers; black swan; intro;shadow, and outtro:ego, respectively.</p>
+  <p>
+    <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://https-mhkwon2020-github-io-bts.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+  </p>
 </body>
 </html>
